css/main.css
@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700);


*, *:before, *:after {
    box-sizing: border-box;
}

html, body {
    background: #F8F9FA;
    color: #2C253D;
    margin: 0;
    padding: 0;
}

html {
    height: 100%;
}

body {
    font-family: 'Source Sans Pro', 'Hevletica Neue', Helvetica, sans-serif;
    font-size: 13px;
    height: 100%;
    min-height: 100%;
}

header {
    color: #fff;
    left: 0;
    padding: 0 15px;
    position: fixed;
    right: 0;
    top: 0;
    transition: background-color 0.3s, color 0.3s;
    z-index: 100;
}
header div {
    align-items: center;
    display: flex;
    height: 100px;
    justify-content: space-between;
    margin: auto;
    max-width: 1024px;
}
header h1 {
    align-items: center;
    display: flex;
    flex: 1 1 auto;
    font-size: 18px;
    font-weight: 600;
}
header h1 svg {
    margin-right: 5px;
}
header ul {
    display: flex;
    flex 0 0 auto;
    list-style: none;
    padding: 0 20px;
}
header > div > a {
    flex 0 0 auto;
}
header ul li {
    padding: 0 15px;
}
header ul li a {
    border-bottom: 2px solid transparent;
    color: inherit;
    font-weight: 600;
    letter-spacing: 1px;
    padding: 5px 0;
    text-decoration: none;
    text-transform: uppercase;
    transition: border-bottom-color 0.1s;
}
header ul li.selected a,
header ul li a:hover {
    border-bottom-color: #fff;
}

header.header-scrolling {
    background: #fff;
    color: #2C253C;
}
header.header-scrolling ul li.selected a,
header.header-scrolling ul li a:hover {
    border-bottom-color: #52D1C7;
}
#header-logo-group {
    transition: fill 0.1s;
}
header.header-scrolling #header-logo-group {
    fill: #52D1C7;
}


header.header-scrolling * g.logotype > path {
  fill: #2C253C;
}

header + section {
    background: #2C253D;
    color: #fff;
    padding: 200px 15px 250px;
    text-align: center;
}
header + section h2 {
    font-size: 36px;
    font-weight: 600;
    margin: 0;
}
header + section p {
    color: rgba(255, 255, 255, 0.5);
    font-size: 18px;
    margin-top: 0px;
    margin-bottom: 50px;
}

.for-podcasters {
    padding: 400px 0 150px;
    text-align: center;
}

.for-podcasters hr {
    background: rgba(0, 0, 0, 0.2);
    border: 0;
    height: 1px;
    margin: 0 auto 50px;
    width: 150px;
}
.for-podcasters h2 {
    font-size: 22px;
    font-weight: 600;
    margin-bottom: 70px;
}
.selling-points {
    margin: auto;
    max-width: 1024px;
}
.selling-points div {
    margin: 0 20px;
    width: 33%;
}
.selling-points img {
    display: block;
    margin: 0 auto 30px;
}
.selling-points strong {
    display: block;
    font-size: 18px;
    font-weight: 600;
}
.selling-points p {
    color: #848498;
    font-size: 16px;
    line-height: 24px;
    margin: 10px 0 0;
}


.point-block {
    padding: 100px 0 50px;
    text-align: center;
}
.point-block h2 {
    font-size: 22px;
    font-weight: 600;
}
.point-block p {
    font-size: 18px;
    line-height: 23px;
    margin: 0 auto 40px;
    max-width: 450px;
}

.publish-track {
    background: linear-gradient(90deg, #6647AF, #946EEE);
    color: #fff;
}

.collect-pledges {
    background: linear-gradient(90deg, #386792, #5295D3);
    color: #fff;
}
.publish-track p,
.collect-pledges p {
    color: rgba(255, 255, 255, 0.5);
}

.plans-pricing {
    margin-top: -99px;  /* Adjust for the 100px-tall sticky header. */
    padding: 200px 15px 0;  /* Padding top with 100px + 100px for sticky header. */
    text-align: center;
}
.plans-pricing > h2 {
    font-size: 22px;
    font-weight: 600;
    margin: 0 0 20px;
}
.plans-pricing > p {
    color: rgba(0, 0, 0, 0.5);
    font-size: 18px;
    line-height: 23px;
    font-weight: 600;
    margin: 0;
}
.plans {
    background: #fff;
    border-radius: 5px;
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
    display: inline-flex;
    justify-content: center;
    margin: 60px auto -50px;
    padding: 50px 25px;
    width: 550px;
}
.plans .plan {
    flex: 0 0 250px;
    padding: 30px 0;
}
.plan + .plan {
    border-left: 1px solid #eee;
}
.plan h3 {
    color: #52D1C7;
    font-size: 16px;
    font-weight: 600;
    margin: 0 0 30px;
    text-transform: uppercase;
}
.plan strong {
    display: block;
    font-size: 32px;
    margin-bottom: 40px;
}
.plan strong sub {
    color: #7D7987;
    font-size: 16px;
    font-weight: 400;
    vertical-align: baseline;
}
.plan ul {
    color: #888;
    font-size: 14px;
    line-height: 24px;
    list-style: none;
    padding: 0;
    text-align: center;
}


.row {
    display: flex;
}

section:last-of-type {
    background: #56D3C9;
    color: #fff;
    padding: 100px 15px 100px;
    text-align: center;
}
section:last-of-type h2 {
    font-size: 22px;
    font-weight: 600;
}
section:last-of-type p {
    font-size: 18px;
    margin-bottom: 40px;
}

footer {
    padding: 0 15px;
}
footer > div {
    align-items: center;
    color: #bbb;
    display: flex;
    height: 70px;
    justify-content: space-between;
    margin: auto;
    max-width: 1024px;
}
footer > div div {
    align-items: center;
}
footer > div div span {
    vertical-align: middle;
}
footer > div div svg {
    flex: 0 0 auto;
    vertical-align: middle;
}

.btn {
    border-radius: 3px;
    box-shadow: 0 0 0 rgba(0, 0, 0, 0);
    display: inline-block;
    letter-spacing: 1px;
    padding: 12px 18px;
    position: relative;
    text-decoration: none;
    text-transform: uppercase;
    top: 0;
    transition: box-shadow 0.2s, top 0.1s;
}
.btn:hover {
    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
}
.btn:active {
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
    top: 3px;
}

.btn-lines {
    letter-spacing: 1px;
    font-weight: 600;
    padding: 11px 17px;
    background: transparent;
    border: 1px solid #fff;
    color: #fff;
    transition: background-color 0.1s border-color 0.1s, color 0.1s;
}
.header-scrolling .btn-lines {
    background: #56D3C9;
    border: 1px solid #56D3C9;
    color: #fff;
}

.btn-white {
    background: #fff;
    color: #56D3C9;
    font-size: 13px;
    font-weight: 600;
}

.btn-green {
    background: #56D3C9;
    box-shadow: 0 0 0 rgba(0, 0, 0, 0), 0 0 0 rgba(0, 0, 0, 0);
    color: #fff;
    font-size: 13px;
    font-weight: 600;
}
.btn-green:hover {
    box-shadow: 0 0 8px rgba(0, 255, 230, 0.6), 0 7px 20px rgba(74, 0, 200, 0.3);
}


.screenshot {
    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
    left: 0;
    margin: 70px auto 0;
    position: absolute;
    right: 0;
    width: 700px;
}
.screenshot img {
    width: 700px;
}
.screenshot:before {
    background: #efefef;
    border-radius: 4px 4px 0 0;
    content: "";
    display: block;
    height: 25px;
}
.screenshot:after {
    background: #e77;
    border: 1px solid #d55;
    border-radius: 13px;
    content: "";
    display: block;
    height: 13px;
    left: 6px;
    position: absolute;
    top: 6px;
    width: 13px;
}


@media (max-width: 760px) {
    header ul li:not(:last-child) {
        display: none;
    }
    .row {
        flex-direction: column;
    }
    .selling-points div {
        margin-bottom: 50px;
        width: auto;
    }
    .for-podcasters {
        padding-bottom: 50px;
        padding-top: 100px;
    }

    .point-block {
        padding: 50px 15px;
    }
    .point-block img {
        max-width: 100%;
    }

    .plans-pricing {
        padding: 150px 15px 50px;  /* Padding top with 50px + 100px for sticky header. */
    }
    .plans-pricing .plans {
        flex-direction: column;
        margin-bottom: 40px;
        width: 100%;
    }
    .plans .plan + .plan {
        border: 0;
        margin-top: 30px;
        margin-bottom: 40px;
    }

    .screenshot,
    .screenshot img {
        width: 300px;
    }
}

